--- a/Sistema_recomendador.ipynb
+++ b/Sistema_recomendador.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1zYmeHuaInF2gCM1H4+HC",
+      "authorship_tag": "ABX9TyOggM/mR/wUCo+86Rw2sSqD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,15 +25,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/jonjimenez99/Portafolio/blob/main/Sistema_recomendador.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "-qMgp3gAJJdF"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -57,7 +48,24 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "np.random.seed(42)\n",
+        "\n",
+        "n_users = 200\n",
+        "n_items = 100\n",
+        "\n",
+        "interactions = {\n",
+        "    \"user_id\": np.random.randint(0, n_users, size=2000),\n",
+        "    \"item_id\": np.random.randint(0, n_items, size=2000),\n",
+        "    \"interaction\": 1  # 1 = interacción positiva\n",
+        "}\n",
+        "\n",
+        "df = pd.DataFrame(interactions)\n",
+        "df.head()\n"
+      ],
       "metadata": {
         "id": "nvAfsdqWJMcs"
       },
